--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -28,24 +28,21 @@ body {
 /* Menu de navegacion */
 
 .nav {
-    position: fixed;
+    position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
-    z-index: 200;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 1.3rem 1.8rem;
+    padding: 1rem 1.5rem;
     
     background-color: var(--base-two);
     border-bottom: 3.5px solid var(--contrast);
 }
 
 .logo {
-    font-family: 'Goldman', cursive;
+    font-family: 'Goldman', sans-serif;
     font-size: 1.6rem;
     font-weight: 700;
     letter-spacing: .6em;
@@ -123,61 +120,4 @@ body {
         margin-left: 3px;
     }
 
-}
-
-
-/* Header */
-
-.header{ 
-    position: relative;
-    z-index: 100;
-
-    width: 100%;
-    height: 100vh;
-    padding-top: 90px;
-    /* background-color: var(--base-two); */
-}
-
-.header__image {
-    height: 100%;
-    width: 50%;
-
-    background-image: url(/assets/images/background-1920x1280.jpg);
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-position: center;
-}
-
-.header__about-me {
-    position: absolute;
-    height: 100%;
-    width: 50%;
-    background-color: var(--base-two);
-
-    top:0;
-    right: 0;
-}
-
-.header__text{
-    
-    height: 150px;
-    width: 550px;
-    padding-top: 5%;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 40%;
-    /* background-color: var(--base-light); */
-
-    border-radius: 20px;
-    border-top: 3px solid var(--contrast) ;
-    border-right: 3px solid var(--contrast);
-
-    box-shadow: -5px 4px 15px 3px #77889909;
-    font-size: 1.2em;
-    text-align: center;
-    text-decoration: none;
-}
-
-.header__text__my-name {
-    font-weight: inherit;
 }
