--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -7,6 +7,8 @@
     --base-two: #0d0d0d; 
     --invert-color: invert(1);
     --base-light: #011c3c4d;
+    --font-title:'Albert Sans', sans-serif;
+    --font-text:'Mulish', sans-serif;
 }
 
 * {
@@ -18,8 +20,8 @@
 body {
     margin: 0;
 
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
+    font-family: var(--font-text);
+    font-weight: 600;
 
     color: var(--letter);
     background-color: var(--base-two);
@@ -42,7 +44,7 @@ body {
 }
 
 .logo {
-    font-family: 'Goldman', sans-serif;
+    font-family: var(--font-title);
     font-size: 1.6rem;
     font-weight: 700;
     letter-spacing: .6em;
