--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -20,10 +20,11 @@ body {
     margin: 0;
 
     font-family: var(--font-text);
-    font-weight: 600;
+    font-weight: 500;
 
     color: var(--letter);
     background-color: var(--base-two);
+    overflow-x: hidden;
 }
 
 /* Menu de navegacion */
@@ -31,7 +32,7 @@ body {
 .nav {
     position: sticky;
     top: 0;
-
+    z-index: 500;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -67,7 +68,6 @@ body {
 .logo {
     display: block;
     padding: .3em 1em;
-
     text-decoration: none;
 
     color: var(--letter);
@@ -79,6 +79,7 @@ body {
 
 .nav__element {
     font-size: 1.2em;
+    font-weight: 600;
 }
 
 .nav__element:hover {
@@ -98,9 +99,64 @@ body {
 
 /* Fin de menu de Navegacion */
 
+/* Creacion de Header */
+
+.header{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.header__info{
+    margin-right: 30px;
+    width: 40%;
+    text-align: center;
+}
+
+.header__img{
+    width: 60%;
+}
+
+.header__title {
+    font-family: var(--font-title);
+    font-size: 2.6rem;
+    font-weight: 700;
+    letter-spacing: .6em;
+    text-transform: uppercase;
+    text-shadow: 1px 1px var(--contrast);
+}
+
+.header_txt {
+    font-size: 1.8rem;
+    padding: 0 1.5em;
+}
+
+.header__btn-register {
+    display: inline-block;
+    padding: .35em .5em;
+    margin-top: 15px;
+    border-radius: 0.35em;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+    color: var(--letter);
+    background-color: var(--contrast);
+}
+
+.header__btn-register:hover{
+    background-color: var(--light);
+}
+/* Fin de Header */
+
+/* Habilidades */
+
+/* Fin de Habilidades */
+
 /* Menu de navegacion para dispositivos moviles */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 777px) {
 
     .nav__button-menu {
         display: block;
