--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -102,7 +102,7 @@ body {
 /* Creacion de Header */
 
 .header{
-    height: 100vh;
+    height: calc(100vh - 80.27px);
     display: flex;
     align-items: center;
     overflow: hidden;
@@ -111,6 +111,7 @@ body {
 .header__info{
     margin-right: 30px;
     width: 40%;
+    min-width: 371px;
     text-align: center;
 }
 
