--- a/stylesheet/media-quaries.css
+++ b/stylesheet/media-quaries.css
@@ -13,6 +13,10 @@
     
         transition: all 0.25s linear;
     }
+
+    .logros:hover .float-menu {
+        display: block;
+    }
 }
 
 @media only screen and (max-width: 768px) {
