--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -150,6 +150,26 @@ body {
 }
 
 .logros {
+    position: relative;
     text-decoration: none;
     display: block;
+}
+
+.float-menu{
+    position: absolute;
+    top: 20px;
+    left: -25px;
+    display: none;
+    height: 100px;
+    width: 230px;
+    outline: 1.5px solid var(--contrast);
+    z-index: 400;
+    overflow: hidden;
+    background-color: var(--contrast);
+}
+
+.float-menu__img {
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
 }
